--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,101 @@
+anyio==4.0.0
 asgiref==3.7.2
-Django==4.2.5
+autoflake==2.0.1
+bcrypt==3.2.2
+beautifulsoup4==4.12.2
+black==23.1.0
+blinker==1.6.2
+cachetools==4.2.2
+certifi==2021.10.8
+cffi==1.15.1
+charset-normalizer==2.0.11
+click==8.1.3
+com2ann==0.3.0
+cryptography==37.0.4
+DateTime==5.0
+daytime==0.4
+defusedxml==0.7.1
+Django==4.2.6
+django-extensions==3.2.3
+Dumper==1.2.0
+EasyProcess==1.1
+entrypoint2==1.1
+feedparser==6.0.10
+Flask==2.3.3
+google-auth==2.1.0
+h11==0.14.0
+httpcore==0.18.0
+httpx==0.25.0
+idna==3.3
+importlib-metadata==4.8.1
+isort==5.12.0
+itsdangerous==2.1.2
+jaraco.classes==3.2.3
+Jinja2==3.1.2
+jira==3.0.1
+keyring==23.2.1
+kubernetes==12.0.1
+libcst==0.4.9
+MarkupSafe==2.1.3
+more-itertools==9.0.0
+MouseInfo==0.1.3
+mss==9.0.1
+mypy-extensions==1.0.0
+oauthlib==3.1.1
+openshift==0.12.1
+openshift-client==1.0.17
+packaging==23.0
+paramiko==2.11.0
+pathspec==0.11.0
+Pillow==10.0.1
+platformdirs==3.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.54
+pycparser==2.21
+pydantic==1.10.13
+pyflakes==3.0.1
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+PyNaCl==1.5.0
+pyobjc-core==10.0
+pyobjc-framework-Cocoa==10.0
+pyobjc-framework-Quartz==10.0
+pyperclip==1.8.2
+PyRect==0.2.0
+pyscreenshot==3.1
+PyScreeze==0.1.29
+pyTelegramBotAPI==4.14.0
+python-dateutil==2.8.2
+python-string-utils==1.0.0
+pytweening==1.0.7
+pytz==2022.7.1
+pyupgrade==3.3.1
+pywhatkit==5.4
+PyYAML==5.4.1
+requests==2.27.1
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+rsa==4.7.2
+rss-parser==1.1.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+rubicon-objc==0.4.6
+sgmllib3k==1.0.0
+shed==0.10.9
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
 sqlparse==0.4.4
+tokenize-rt==5.0.0
+typing-inspect==0.8.0
+typing_extensions==4.4.0
+Unidecode==1.3.6
+urllib3==1.26.8
+websocket-client==1.2.1
+Werkzeug==2.3.7
+wikipedia==1.4.0
+xmltodict==0.13.0
+yamlloader==1.2.2
+zipp==3.7.0
+zope.interface==5.5.2
